@@ -1,5 +1,6 @@
 DATE       AUTHOR       CHANGE
 ---------- --------     --------------------------------------------------------
+2002-10-11 nonchocoboy  Added output function for AABox.
 2002-09-20 nonchocoboy  NEW VERSION: 0.1.9
 2002-09-15 subatomic    added Math::clamp
 2002-09-11 allenb       CoordQuat fixed so that it can be instantiated.
